tests/decoding/snapshots/decoding__png_suite__s08i3p02.snap
---
source: tests/decoding/main.rs
expression: "PNG::decode(&input).unwrap()"
---
PNG {
    header: IHDRChunk {
        width: 8,
        height: 8,
        bit_depth: 2,
        color_type: IndexedColor,
        compression_method: 0,
        filter_method: 0,
        interlace_method: Adam7,
    },
    extra_chunks: [
        Unknown(
            RawChunk {
                _chunk_type: [
                    103,
                    65,
                    77,
                    65,
                ],
                _chunk_data: [
                    0,
                    1,
                    134,
                    160,
                ],
            },
        ),
        Unknown(
            RawChunk {
                _chunk_type: [
                    115,
                    66,
                    73,
                    84,
                ],
                _chunk_data: [
                    4,
                    4,
                    4,
                ],
            },
        ),
    ],
    pixels: [
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 65535,
            blue: 30583,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 65535,
            blue: 30583,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 65535,
            blue: 30583,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 65535,
            blue: 30583,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 30583,
            green: 0,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 65535,
            green: 30583,
            blue: 0,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
        Pixel {
            red: 0,
            green: 65535,
            blue: 65535,
            alpha: 65535,
        },
    ],
}
